# GreengoLingo

./: .gitignore  Cargo.toml  README.md  index.html  justfile  package-lock.json  package.json  pubspec.yaml
.github/workflows/: pr-build.yml  release.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/: app.dart
lib/src/providers/: gamification_provider.dart  progress_provider.dart  settings_provider.dart  srs_provider.dart  statistics_provider.dart  vocabulary_provider.dart
lib/src/screens/: main_shell.dart
lib/src/services/: haptic_service.dart  lesson_service.dart  storage_service.dart
lib/src/theme/: app_theme.dart  colors.dart
linux/: CMakeLists.txt  greengolingo.desktop
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: api.rs  lib.rs
rust/src/engine/: mod.rs  validator.rs
rust/src/gamification/: achievements.rs  mod.rs  streak.rs  xp.rs
rust/src/models/: content.rs  language.rs  lesson.rs  level.rs  mod.rs  question.rs
rust/src/progress/: mod.rs  tracker.rs
rust/src/srs/: card.rs  mod.rs  scheduler.rs  vocabulary.rs
rust/src/statistics/: analytics.rs  daily.rs  mod.rs  reports.rs
scripts/: generate_icons.sh
src/: content.rs  dialect.rs  lesson.rs  lib.rs  main.js  progress.rs  question.rs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
windows/: CMakeLists.txt  installer.iss
windows/runner/: Runner.rc  main.cpp
(+191 files in other folders)
