[package]
name = "greengolingo_core"
version = "0.1.0"
edition = "2021"
description = "Core logic for GreengoLingo language learning app"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
flutter_rust_bridge = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
unicode-normalization = "0.1"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(frb_expand)"] }
