[package]
name = "greengolingo-tauri"
version = "0.1.0"
description = "GreenGoLingo Tauri Application"
authors = []
edition = "2021"

[lib]
name = "greengolingo_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.9", features = [] }
tauri-plugin-shell = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
greengolingo_core = { path = ".." }
